# smth

./: CMakeLists.txt
src/: main.cpp
src/render/: shader.cpp  shader.h
src/shader/: fragment_shader.fs  shader.cpp  vertex_shader.vs
src/texture/: texture.cpp  texture.h
tasks/: two_triangles_two_shaders.cpp
